# fastapi-poetry-helloworld

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi_poetry_helloworld/: main.py
tests/: test_main.py
