[tool.poetry]
name = "fastapi_poetry_helloworld"
version = "0.1.0"
description = ""
authors = ["saadfrhan <saadfarhan347@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
uvicorn = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fastapi_poetry_helloworld.main:start"
